--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,7 @@
 
 node_modules/*
+www/*
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
